<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:title="@string/title_show_details"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">


                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="The Return of The King" />

                <TextView
                    android:id="@+id/movieYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2008" />

            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEE"
                android:padding="5dp"
                app:alignContent="flex_start"
                app:alignItems="flex_start"
                app:flexWrap="wrap">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_genres"
                    android:textStyle="bold" />

                <!--TODO remove includes and add items programmatically from the activity -->

                <include layout="@layout/list_item_genre" />

                <include layout="@layout/list_item_genre" />

                <include layout="@layout/list_item_genre" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/title_production_companies"
                    android:textStyle="bold" />

                <!--TODO remove includes and add items programmatically from the activity -->

                <include layout="@layout/list_item_production_company" />

                <include layout="@layout/list_item_production_company" />

                <include layout="@layout/list_item_production_company" />


            </com.google.android.flexbox.FlexboxLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/title_synopsis"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                tools:text="@string/sample_movie_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_status"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/showStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Released" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
